# sibench

./: .gitignore  LICENSE  README.md  pyproject.toml  run_hpopt.sh
src/sibench/: _fastcan.py  _nixtla.py  _pysindy.py  _results.py  _sktime.py
