[project]
name = "sibench"
version = "0.1.0"
description = "Benchmarks for system identification methods"
readme = "README.md"
authors = [
    { name = "sikai zhang", email = "matthew.szhang91@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "fastcan>=0.5.0",
    "nonlinear-benchmarks>=1.0.1",
    "optuna>=4.7.0",
    "pysindy>=2.1.0",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
    "sktime>=0.40.1",
    "statsforecast>=2.0.3",
]

[project.scripts]
opt-fastcan = "sibench._fastcan:hpopt"
eval-fastcan = "sibench._fastcan:evaluate"
opt-pysindy = "sibench._pysindy:hpopt"
eval-pysindy = "sibench._pysindy:evaluate"
opt-nixtla = "sibench._nixtla:hpopt"
eval-nixtla = "sibench._nixtla:evaluate"
opt-sktime = "sibench._sktime:hpopt"
eval-sktime = "sibench._sktime:evaluate"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"


[tool.ty.environment]
python = ".venv"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]
